--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+.idea/
 # C extensions
 *.so
-
+static/
+media/
 # Distribution / packaging
 .Python
 build/
